upgrade homomorphic encryption

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ flwr
 phe
 scikit-learn
 pandas
-numpy
+numpy==1.26.4
 androguard==3.4.0a1
 datasets
 flwr_datasets
 flwr[simulation]>=1.0, <2.0
 hydra-core==1.3.2
+tenseal
+phe==1.5.0
+termcolor
+options
